Recent Changes for the auction site

--- a/AuctCentral/appsettings.json
+++ b/AuctCentral/appsettings.json
@@ -12,5 +12,5 @@
     "ProfilesLocation": "C:\\Users\\matth\\.aws\\credentials",
     "Region": "us-east-2"
   },
-  "APIURL": "http://securityapi-env.eba-3534xsm2.us-east-2.elasticbeanstalk.com/api/"
+  "APIURL": "http://kwik-kards.com/AuctionApi/api/"
 }
